tests/rosetta/out/Rust/arithmetic-numbers.error
rustc: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/arithmetic-numbers.rs:41:30
   |
41 |         while s.len() as i32 < 3 {
   |                              ^ --- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
41 |         while (s.len() as i32) < 3 {
   |               +              +

error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/arithmetic-numbers.rs:81:32
   |
81 |         while arr.len() as i32 < limit {
   |                                ^ ------- interpreted as generic arguments
   |                                |
   |                                not interpreted as comparison
   |
help: try comparing the cast value
   |
81 |         while (arr.len() as i32) < limit {
   |               +                +

warning: unnecessary parentheses around assigned value
   --> /tmp/arithmetic-numbers.rs:103:28
    |
103 |                     tau *= (cnt + 1);
    |                            ^       ^
    |
    = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
    |
103 -                     tau *= (cnt + 1);
103 +                     tau *= cnt + 1;
    |

error[E0308]: mismatched types
  --> /tmp/arithmetic-numbers.rs:44:16
   |
39 |     fn pad3(n: i32) -> &'static str {
   |                        ------------ expected `&'static str` because of return type
...
44 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
44 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/arithmetic-numbers.rs:52:54
   |
52 |             out = format!("{}{}", &s[i as usize..i + 1 as usize], out);
   |                                                      ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/arithmetic-numbers.rs:52:50
   |
52 |             out = format!("{}{}", &s[i as usize..i + 1 as usize], out);
   |                                                  ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/arithmetic-numbers.rs:52:52
   |
52 |             out = format!("{}{}", &s[i as usize..i + 1 as usize], out);
   |                                                    ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/arithmetic-numbers.rs:59:16
   |
46 |     fn commatize(n: i32) -> &'static str {
   |                             ------------ expected `&'static str` because of return type
...
59 |         return out;
   |                ^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
59 |         return &out;
   |                +

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/arithmetic-numbers.rs:65:61
   |
65 |             let mut mid = (((lo + hi) as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                             ^^^^^ method not found in `f64`

error[E0277]: cannot subtract `usize` from `f64`
   --> /tmp/arithmetic-numbers.rs:134:39
    |
134 |             let last = arr[(x as f64) - 1 as f64 as usize];
    |                                       ^ no implementation for `f64 - usize`
    |
    = help: the trait `Sub<usize>` is not implemented for `f64`
    = help: the following other types implement trait `Sub<Rhs>`:
              `&f64` implements `Sub<f64>`
              `&f64` implements `Sub`
              `f64` implements `Sub<&f64>`
              `f64` implements `Sub`

error[E0277]: cannot subtract `{integer}` from `f64`
   --> /tmp/arithmetic-numbers.rs:139:47
    |
139 |             let comp = (x as f64) - pc as f64 - 1;
    |                                               ^ no implementation for `f64 - {integer}`
    |
    = help: the trait `Sub<{integer}>` is not implemented for `f64`
    = help: the following other types implement trait `Sub<Rhs>`:
              `&f64` implements `Sub<f64>`
              `&f64` implements `Sub`
              `f64` implements `Sub<&f64>`
              `f64` implements `Sub`
help: consider using a floating-point literal by writing it with `.0`
    |
139 |             let comp = (x as f64) - pc as f64 - 1.0;
    |                                                  ++

error: aborting due to 10 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
